syntax = "proto3";
package proto;
option go_package = ".";
message Order{
    int32 OrderID =1;
    int32 CustomerId =2;
    int32 ProductID =3;
    int32 Quantity =4;
}
message CreateOrderRequest{
    int32 customerID =1;
    int32 productId = 2;
    int32 quantity = 3;

}
message CreateOrderResponse{
    string status =1;

}
message GetOrderResponse{
    repeated Order orders =1;

}


service Orderservice{
    rpc CreateOder(CreateOrderRequest) returns (CreateOrderResponse);
}

